fixes Dockerfile for Java 17